优化验证码生成逻辑;新增获取验证码接口
